--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>
             <td>Camiseta</td>
-            <td>Preta</td>
+            <td>vermelha</td>
             <td>M</td>
             <td>R$ 80,00</td>
             <td>Em Estoque</td>
